estrutura pronta - luciana

--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/header-style.css">
         <link rel="stylesheet" href="./css/contato-style.css">
+        <link rel="shortcut icon" type="imagex/svg" href="./img/paw-icon.svg">
         <title>Felpudos | Encontre um amigo, salve uma vida</title>
     </head>
     <body>
