--- a/inicio.html
+++ b/inicio.html
@@ -8,12 +8,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/header-style.css">
         <link rel="stylesheet" href="./css/inicio-style.css">
+        <link rel="shortcut icon" type="imagex/svg" href="./img/paw-icon.svg">
         <title>Felpudos | Encontre um amigo, salve uma vida</title>
     </head>
     <body>
         
         <header>
-
             <nav class="nav-header">
                 <div class="logo">
                     <a href="inicio.html">
@@ -41,6 +41,7 @@
                     </ul>
                 </div>
             </nav>
+
 
             <div class="mobile-menu">
                 <ul>
@@ -78,8 +79,13 @@
                     </li>
                 </ul>
             </div>
-
         </header>
+
+        <main>
+            <div class="banner">
+
+            </div>
+        </main>
 
 
         <script src="./js/header-script.js"></script>
