--- a/quero-ajudar.html
+++ b/quero-ajudar.html
@@ -8,12 +8,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/header-style.css">
         <link rel="stylesheet" href="./css/quero-ajudar-style.css">
+        <link rel="shortcut icon" type="imagex/svg" href="./img/paw-icon.svg">
         <title>Felpudos | Encontre um amigo, salve uma vida</title>
     </head>
     <body>
         
         <header>
-
             <nav class="nav-header">
                 <div class="logo">
                     <a href="inicio.html">
@@ -78,7 +78,6 @@
                     </li>
                 </ul>
             </div>
-
         </header>
 
 
