--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,1000&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/header-style.css">
         <link rel="stylesheet" href="./css/contato-style.css">
         <link rel="shortcut icon" type="imagex/svg" href="./img/paw-icon.svg">
