--- a/inicio.html
+++ b/inicio.html
@@ -37,8 +37,8 @@
 
                 <div class="acess">
                     <ul>
-                        <span><a href="">ENTRAR</a></span>
-                        <a href=""><button>CRIAR CONTA</button></a>
+                        <span><a href="login.html">ENTRAR</a></span>
+                        <a href="cadastro.html  "><button>CRIAR CONTA</button></a>
                     </ul>
                 </div>
             </nav>
@@ -82,7 +82,14 @@
             </div>
         </header>
 
-
+        <main>
+            <div class="banner">
+                <div class="banner-text">
+                    <h1>Encontre um amigo, salve uma vida.</h1>
+                    <p>Adote um animalzinho, ajude ou agende uma consulta gratuita</p>
+                </div>
+            </div>
+        </main>
 
 
 
