--- a/quem-somos.html
+++ b/quem-somos.html
@@ -38,8 +38,8 @@
 
                 <div class="acess">
                     <ul>
-                        <span><a href="">ENTRAR</a></span>
-                        <a href=""><button>CRIAR CONTA</button></a>
+                        <span><a href="login.html">ENTRAR</a></span>
+                        <a href="cadastro.html"><button>CRIAR CONTA</button></a>
                     </ul>
                 </div>
             </nav>
