--- a/inicio.html
+++ b/inicio.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,1000&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/header-style.css">
         <link rel="stylesheet" href="./css/inicio-style.css">
-        <link rel="shortcut icon" type="imagex/svg" href="./img/paw-icon.svg">
+        <link rel="shortcut icon" type="imagex/svg" href="./img/felupudos-shotcut.svg">
         <title>Felpudos | Encontre um amigo, salve uma vida</title>
     </head>
     <body>
@@ -89,8 +89,58 @@
                     <p>Adote um animalzinho, ajude ou agende uma consulta gratuita</p>
                 </div>
             </div>
-        </main>
 
+            <!-- REVISAR -->
+
+            <section class="how-it-works-content">
+                <h2>Como Funciona?</h2>
+                <div class="pointer-separator">
+                    <div class="black-circle"></div>
+                    <div class="black-circle"></div>
+                    <div class="black-circle"></div>
+                    <div class="black-circle"></div>
+                </div>
+
+                <div class="how-it-works-menu">
+                    <div class="how-it-works-item">
+                        <div class="circle">
+                            <img src="./img/globe-icon.svg" alt="">
+                        </div>
+                        <h3>Acesse nosso site</h3>
+                    </div>
+
+                    <div class="how-it-works-item">
+                        <div class="circle">
+                            <img src="./img/pet-icon.svg" alt="">
+                        </div>
+                        <h3>Escolha um felpudo</h3>
+                    </div>
+
+                    <div class="how-it-works-item">
+                        <div class="circle">
+                            <img src="./img/home-icon.svg" alt="">
+                        </div>
+                        <h3>Agende uma visita</h3>
+                    </div>
+
+                    <div class="how-it-works-item">
+                        <div class="circle">
+                            <img src="./img/paw-icon.svg" alt="">
+                        </div>
+                        <h3>ADOTE!</h3>
+                    </div>
+                </div>
+
+                <div class="how-it-works-text">
+                    
+                </div>
+
+
+            </section>
+
+
+
+        </main>
 
 
         <script src="./js/header-script.js"></script>
