Criação da Main

--- a/quero-ajudar.html
+++ b/quero-ajudar.html
@@ -81,6 +81,9 @@
             </div>
         </header>
 
+        <main>
+            
+        </main>
 
         <script src="./js/header-script.js"></script>
 
