Prosseguindo com desenvolvimento

--- a/quero-ajudar.html
+++ b/quero-ajudar.html
@@ -82,7 +82,28 @@
         </header>
 
         <main>
-            
+            <section class="banner">
+                <div class="banner-text">
+                    <h1>Quero Ajudar</h1>
+                </div>
+            </section>
+            <section class="section-texto-primeiro">
+                <div class="boas-vindas">
+                    <h2>Boas Vindas a nossa página de doações</h2>
+                    <p>Neste espaço, é possível visualizar a listagem completa de tudo que nossos amigos felpudos precisam no dia a dia e contribuir.</p>
+                </div><!--boas-vindas-->
+                <div class="endereco">
+                    <h2>Endereço de Entrega</h2>
+                    <p id="cidade"><b>Taiaçu - SP</b></p>
+                    <p>R. Raul Maçone, 306 - Centro, Taiaçu - SP, 14725-000</p>
+                </div><!--endereco-->
+            </section>
+            <section class="section-texto-segundo">
+                <div class="como-funciona">
+                    <h2>Como Funciona?</h2>
+                    <p>Este recurso oferece uma forma prática e eficiente para manter nossos companheiros de quatro patas, que ainda não encontraram um lar, bem cuidados. Ao acessar essa área dedicada, os colaboradores têm a oportunidade de explorar uma lista detalhada das necessidades diárias dos nossos cães e gatos e fazer suas doações de forma direta no nosso endereço, na sua cidade.</p>
+                </div>
+            </section>
         </main>
 
         <script src="./js/header-script.js"></script>
