--- a/inicio.html
+++ b/inicio.html
@@ -131,13 +131,17 @@
                     </div>
                 </div>
 
-                <div class="how-it-works-text">
-                    
+                <div class="how-it-works-info">
+                    <div class="how-it-works-info-image">
+                        <div class="photo-1"></div>
+                        <div class="photo-2"></div>
+                        <div class="photo-3"></div>
+                    </div>
+                    <div class="how-it-works-info-text">
+                        <h2>Regatando um animalzinho da rua, você se torna elegível para <span class="how-it-works-info-text-h2-color">consultas gratuitas</span></h2>
+                    </div>
                 </div>
-
-
             </section>
-
 
 
         </main>
