--- a/inicio.html
+++ b/inicio.html
@@ -103,49 +103,66 @@
 
                 <div class="how-it-works-menu">
                     <div class="how-it-works-item">
-                        <div class="circle">
+                        <div class="circle-how-it-works">
                             <img src="./img/globe-icon.svg" alt="">
                         </div>
                         <h3>Acesse nosso site</h3>
                     </div>
 
                     <div class="how-it-works-item">
-                        <div class="circle">
+                        <div class="circle-how-it-works">
                             <img src="./img/pet-icon.svg" alt="">
                         </div>
                         <h3>Escolha um felpudo</h3>
                     </div>
 
                     <div class="how-it-works-item">
-                        <div class="circle">
+                        <div class="circle-how-it-works">
                             <img src="./img/home-icon.svg" alt="">
                         </div>
                         <h3>Agende uma visita</h3>
                     </div>
 
                     <div class="how-it-works-item">
-                        <div class="circle">
+                        <div class="circle-how-it-works">
                             <img src="./img/paw-icon.svg" alt="">
                         </div>
                         <h3>ADOTE!</h3>
                     </div>
                 </div>
+            </section>
 
-                <div class="how-it-works-info">
-                    <div class="how-it-works-info-image">
-                        <div class="photo-1"></div>
-                        <div class="photo-2"></div>
-                        <div class="photo-3"></div>
+            <div class="how-it-works-text">
+                <div class="how-it-works-text-h2">
+                    <h2>Resgatando um animalzinho da rua, você se torna elegível para <span class="how-it-works-text-h2-color">consultas gratuitas</span></h2>
+                </div>
+            </div>
+
+            <section class="our-services">
+                <div class="our-services-menu">
+                    <div class="our-services-adopt">
+                        <div class="circle-our-services">
+                            <img src="./img/heart-icon.svg" alt="">
+                        </div>
+                        <h3>Adote um Felpudo</h3>
+                        <p>Clicando no botão "Adotar", você pode conferir a listagem completa de felpudos que estão esperando um lar</p>
+                        <button>ADOTAR</button>
                     </div>
-                    <div class="how-it-works-info-text">
-                        <h2>Regatando um animalzinho da rua, você se torna elegível para <span class="how-it-works-info-text-h2-color">consultas gratuitas</span></h2>
+
+                    <div class="our-services-appointment">
+                        <div class="circle-our-services">
+                            <img src="./img/appointment-icon.svg" alt="">
+                        </div>
+                        <h3>Adote um Felpudo</h3>
+                        <p>Já adotou seu felpudo? Se sim, clique no botão "Agendar" e verifique os horários disponíveis em conjunto com nossos veterinários parceiros</p>
+                        <button>AGENDAR</button>
                     </div>
                 </div>
             </section>
-
-
         </main>
 
+
+        <footer></footer>
 
         <script src="./js/header-script.js"></script>
 
