--- a/inicio.html
+++ b/inicio.html
@@ -161,9 +161,33 @@
             </section>
         </main>
 
+        <section class="slide-images">
+            <div class="image-config" id="slide-photo1"></div>
+            <div class="image-config" id="slide-photo2"></div>
+            <div class="image-config" id="slide-photo3"></div>
+            <div class="image-config" id="slide-photo4"></div>
+        </section>
+        
 
-        <footer></footer>
+        <footer>
+            <div class="footer-content">
+                <nav class="footer-nav-shortcut">
+                    <h3>Mapa do Site</h3>
+                    <ul>
+                        <li><a href="./inicio.html">Início</a></li>
+                        <li><a href="./quem-somos.html">Quem Somos</a></li>
+                        <li><a href="./contato.html">Contato</a></li>
+                        <li><a href="./quero-ajudar.html">Quero Ajudar</a></li>
+                    </ul>
+                </nav>
 
+                <nav>
+                    <a href="inicio.html">
+                        <img src="./img/logo-icon-white.svg" alt="Logo Felpudos">
+                    </a>
+                </nav>
+            </footer>
+        </div>
         <script src="./js/header-script.js"></script>
 
     </body>
