--- a/inicio.html
+++ b/inicio.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,1000&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/header-style.css">
         <link rel="stylesheet" href="./css/inicio-style.css">
+        <link rel="stylesheet" href="./css/footer-style.css">
         <link rel="shortcut icon" type="imagex/svg" href="./img/felupudos-shotcut.svg">
         <title>Felpudos | Encontre um amigo, salve uma vida</title>
     </head>
