--- a/inicio.html
+++ b/inicio.html
@@ -29,6 +29,7 @@
                         <li class="desktop-menu-item"><a href="quem-somos.html" id="menu-quem-somos">Quem Somos</a></li>
                         <li class="desktop-menu-item"><a href="quero-ajudar.html" id="menu-quero-ajudar">Quero Ajudar</a></li>
                         <li class="desktop-menu-item"><a href="contato.html" id="menu-contato">Contato</a></li>
+                        <li class="desktop-menu-item"><a href="#our-services-id">Nossos Serviços</a></li>
                     </ul>
                 </div>
 
@@ -139,7 +140,7 @@
                 </div>
             </div>
 
-            <section class="our-services">
+            <section class="our-services" id="our-services-id">
                 <div class="our-services-menu">
                     <div class="our-services-adopt">
                         <div class="circle-our-services">
@@ -189,7 +190,8 @@
                 </nav>
             </footer>
         </div>
-        <script src="./js/header-script.js"></script>
 
+        
+        <script src="./js/header-script.js"></script>
     </body>
 </html>
