--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +9,35 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,1000&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/header-style.css">
         <link rel="stylesheet" href="./css/inicio-style.css">
+        <link rel="stylesheet" href="./css/login-style.css">
         <link rel="shortcut icon" type="imagex/svg" href="./img/paw-icon.svg">
         <title>Felpudos | Encontre um amigo, salve uma vida</title>
     </head>
     <body>
-        
+        <main>
+            <nav class="nav-header">
+                <div class="logo">
+                    <a href="inicio.html">
+                        <img src="./img/logo-icon.svg" alt="Logo Felpudos">
+                    </a>
+                </div>
+            </nav>
+            <div class="right-login">
+                <div class="card-login">
+                    <h1>Login</h1>
+                    <p class="h1-p">Entre com suas informações para acessar o painel do tutor</p>
+                    <div class="textfield">
+                        <label for="usuario">Usuário</label>
+                        <input type="text" name="usuario" placeholder="Digite seu usuário">
+                    </div>
+                    <div class="textfield">
+                        <label for="senha">Senha</label>
+                        <input type="password" name="senha" placeholder="Digite sua senha">
+                    </div>
+                    <button class="btn-login">Login</button>
+                    <p>Não possui uma conta? Crie uma <a href="cadastro.html">aqui</a></p>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
