Atualização das páginas

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -30,6 +30,7 @@
                         <li class="desktop-menu-item"><a href="quem-somos.html" id="menu-quem-somos">Quem Somos</a></li>
                         <li class="desktop-menu-item"><a href="quero-ajudar.html" id="menu-quero-ajudar">Quero Ajudar</a></li>
                         <li class="desktop-menu-item"><a href="contato.html" id="menu-contato">Contato</a></li>
+                        <li class="desktop-menu-item"><a href="./inicio.html">Nossos Serviços</a></li>
                     </ul>
                 </div>
 
