--- a/contato.html
+++ b/contato.html
@@ -30,6 +30,7 @@
                         <li class="desktop-menu-item"><a href="quem-somos.html" id="menu-quem-somos">Quem Somos</a></li>
                         <li class="desktop-menu-item"><a href="quero-ajudar.html" id="menu-quero-ajudar">Quero Ajudar</a></li>
                         <li class="desktop-menu-item"><a href="contato.html" id="menu-contato">Contato</a></li>
+                        <li class="desktop-menu-item"><a href="./inicio.html">Nossos Serviços</a></li>
                     </ul>
                 </div>
 
@@ -85,6 +86,11 @@
         </header>
 
         <main>
+            <section class="banner">
+                <div class="banner-text">
+                    <h1>Contato</h1>
+                </div>
+            </section>
             <!--
                 Conteúdo da página
             -->
