--- a/quero-ajudar.html
+++ b/quero-ajudar.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./css/quero-ajudar-style.css">
         <link rel="stylesheet" href="./css/footer-style.css">
         <link rel="shortcut icon" type="imagex/svg" href="./img/paw-icon.svg">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <title>Felpudos | Encontre um amigo, salve uma vida</title>
     </head>
     <body>
@@ -29,6 +30,7 @@
                         <li class="desktop-menu-item"><a href="quem-somos.html" id="menu-quem-somos">Quem Somos</a></li>
                         <li class="desktop-menu-item"><a href="quero-ajudar.html" id="menu-quero-ajudar">Quero Ajudar</a></li>
                         <li class="desktop-menu-item"><a href="contato.html" id="menu-contato">Contato</a></li>
+                        <li class="desktop-menu-item"><a href="./inicio.html">Nossos Serviços</a></li>
                     </ul>
                 </div>
 
@@ -81,11 +83,51 @@
                 </ul>
             </div>
         </header>
-
         <main>
-            <!--
-                Conteúdo da página
-            -->
+            <section class="banner">
+                <div class="banner-text">
+                    <h1>Quero Ajudar</h1>
+                </div>
+            </section>
+            <section class="section-texto-primeiro">
+                <div class="boas-vindas">
+                    <h2>Boas Vindas a nossa página de doações</h2>
+                    <p>Neste espaço, é possível visualizar a listagem completa de tudo que nossos amigos felpudos precisam no dia a dia e contribuir.</p>
+                </div><!--boas-vindas-->
+                <div class="endereco">
+                    <h2>Endereço de Entrega</h2>
+                    <p id="cidade"><b>Taiaçu - SP</b></p>
+                    <p>R. Raul Maçone, 306 - Centro, Taiaçu - SP, 14725-000</p>
+                </div><!--endereco-->
+            </section>
+            <section class="section-texto-segundo">
+                <div class="como-funciona">
+                    <h2>Como Funciona?</h2>
+                    <p>Este recurso oferece uma forma prática e eficiente para manter nossos companheiros de quatro patas, que ainda não encontraram um lar, bem cuidados. Ao acessar essa área dedicada, os colaboradores têm a oportunidade de explorar uma lista detalhada das necessidades diárias dos nossos cães e gatos e fazer suas doações de forma direta no nosso endereço.</p>
+                </div>
+            </section>
+            <section class="especialidades">
+                <div class="interface">
+                    <h2 class="titulo">Necessidade de Doações</h2>
+                    <div class="flex">
+                        <div class="especialidade-box">
+                            <i class="bi bi-cart-plus"></i>
+                            <h3>Alimentos</h3>
+                            <p>Você pode fazer a diferença na vida de um fiel amigo de quatro patas! Doe alimento para cachorro e ajude a garantir que esses animais recebam o amor e cuidado que merecem. Sua generosidade fará os rabinhos abanarem e os corações dos peludos baterem mais felizes.</p>
+                        </div>
+                        <div class="especialidade-box">
+                            <i class="bi bi-shift"></i>
+                            <h3>Roupas de Pet</h3>
+                            <p>Já pensou em dar um toque de estilo e conforto extra aos amiguinhos de quatro patas? Doe roupas de pet e ajude a manter os peludos quentinhos e adoráveis. Seu gesto de carinho fará com que eles se sintam ainda mais amados e estilosos</p>
+                        </div><
+                        <div class="especialidade-box">
+                            <i class="bi bi-trash2"></i>
+                            <h3>Vasilhas</h3>
+                            <p>Ajude-nos a encher os pratinhos de esperança! Sua doação de vasilhas de alimento garantirá que todos os peludos tenham acesso a refeições deliciosas e nutritivas. Cada pratinho cheio é um passo em direção a barriguinhas satisfeitas e corações gratos.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer>
