--- a/login.html
+++ b/login.html
@@ -27,8 +27,8 @@
                     <h1>Login</h1>
                     <p class="h1-p">Entre com suas informações para acessar o painel do tutor</p>
                     <div class="textfield">
-                        <label for="usuario">Usuário</label>
-                        <input type="text" name="usuario" placeholder="Digite seu usuário">
+                        <label for="usuario">Email</label>
+                        <input type="text" name="usuario" placeholder="Digite seu Email">
                     </div>
                     <div class="textfield">
                         <label for="senha">Senha</label>
