--- a/quem-somos.html
+++ b/quem-somos.html
@@ -86,23 +86,27 @@
         </header>
 
         <main>
- 
-
-            <div class="banner-qs">
-                <div class="banner-text-qs">
-                    <h1>Sobre nós</h1>
+            <section class="banner">
+                <div class="banner-text">
+                    <h1>Quem Somos</h1>
                 </div>
-            </div>
+            </section>
+
+            <section class="primeiro-texto">
+                <div class="organizacao">
+                    <h2>A organização Felpudos</h2>
+                    <p>Nós somos uma iniciativa dedicada a criar um impacto positivo na vida
+                        dos nossos amigos de quatro patas. Nossa missão é oferecer
+                        atendimento médico gratuito para animais em situação de rua e aqueles
+                        que foram resgatados, em parceria com centros veterinários locais.
+                        Estamos comprometidos em transformar a realidade desses animais e, ao
+                        mesmo tempo, conscientizar a comunidade sobre a importância da
+                        adoção responsável e dos cuidados adequados.</p>
+                </div>
+            </section>
 
             <section class="org-felpudos-content">
-                <h2>A organização Felpudos</h2>
-                <p>  Nós somos uma iniciativa dedicada a criar um impacto positivo na vida
-                    <br> dos nossos amigos de quatro patas. Nossa missão é oferecer <br> atendimento médico gratuito para animais em situação
-                     de rua e aqueles <br> que foram resgatados, em parceria com centros veterinários locais. <br>
-                     Estamos comprometidos em transformar a realidade desses animais e, ao <br> mesmo tempo, conscientizar a 
-                     comunidade sobre a importância da <br> adoção responsável e dos cuidados adequados.</p>
-
-                <h3>Nossos objetivos</h3>
+                <h2>Nossos Objetivos</h2>
                 <div class="goal-global">
                     <div class="goal-container">
                         <div class="goal-global-col1">
