--- a/cadastro.html
+++ b/cadastro.html
@@ -43,7 +43,12 @@
     
                         <div class="input-box">
                             <label for="number">Celular</label>
-                            <input id="number" type="tel" name="number" placeholder="(xx) xxxx-xxxx" required>
+                            <input id="number" type="tel" name="number" placeholder="(xx) xxxxx-xxxx" required>
+                        </div>
+
+                        <div class="input-box">
+                            <label for="data">Data de Nascimento</label>
+                            <input id="data" type="date" name="data" placeholder="00/00/0000" required>
                         </div>
 
                         <div class="input-box">
@@ -51,10 +56,6 @@
                             <input id="cpf" type="text" name="cpf" placeholder="000.000.000-00" required>
                         </div>
 
-                        <div class="input-box">
-                            <label for="data">Data de Nascimento</label>
-                            <input id="data" type="date" name="data" placeholder="00/00/0000" required>
-                        </div>
     
                         <div class="input-box">
                             <label for="password">Senha</label>
