--- a/cadastro.html
+++ b/cadastro.html
@@ -76,12 +76,12 @@
     
                         <div class="gender-group">
                             <div class="gender-input">
-                                <input id="female" type="radio" name="gender">
+                                <input id="female" type="radio" name="gender" required>
                                 <label for="female">Feminino</label>
                             </div>
     
                             <div class="gender-input">
-                                <input id="male" type="radio" name="gender">
+                                <input id="male" type="radio" name="gender" required>
                                 <label for="male">Masculino</label>
                             </div>
                         </div>
