--- a/cadastro.html
+++ b/cadastro.html
@@ -84,6 +84,11 @@
                                 <input id="male" type="radio" name="gender" required>
                                 <label for="male">Masculino</label>
                             </div>
+
+                            <div class="gender-input">
+                                <input id="none" type="radio" name="gender" required>
+                                <label for="none">Prefiro não dizer</label>
+                            </div>
                         </div>
                     </div>
     
