--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,1000&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/header-style.css">
         <link rel="stylesheet" href="./css/contato-style.css">
+        <link rel="stylesheet" href="./css/footer-style.css">
         <link rel="shortcut icon" type="imagex/svg" href="./img/paw-icon.svg">
         <title>Felpudos | Encontre um amigo, salve uma vida</title>
     </head>
@@ -29,6 +30,7 @@
                         <li class="desktop-menu-item"><a href="quem-somos.html" id="menu-quem-somos">Quem Somos</a></li>
                         <li class="desktop-menu-item"><a href="quero-ajudar.html" id="menu-quero-ajudar">Quero Ajudar</a></li>
                         <li class="desktop-menu-item"><a href="contato.html" id="menu-contato">Contato</a></li>
+                        <li class="desktop-menu-item"><a href="./inicio.html">Nossos Serviços</a></li>
                     </ul>
                 </div>
 
@@ -83,6 +85,37 @@
 
         </header>
 
+        <main>
+            <section class="banner">
+                <div class="banner-text">
+                    <h1>Contato</h1>
+                </div>
+            </section>
+            <!--
+                Conteúdo da página
+            -->
+        </main>
+
+        <footer>
+            <div class="footer-content">
+                <nav class="footer-nav-shortcut">
+                    <h3>Mapa do Site</h3>
+                    <ul>
+                        <li><a href="./inicio.html">Início</a></li>
+                        <li><a href="./quem-somos.html">Quem Somos</a></li>
+                        <li><a href="./contato.html">Contato</a></li>
+                        <li><a href="./quero-ajudar.html">Quero Ajudar</a></li>
+                    </ul>
+                </nav>
+
+                <nav>
+                    <a href="inicio.html">
+                        <img src="./img/logo-icon-white.svg" alt="Logo Felpudos">
+                    </a>
+                </nav>
+            </footer>
+        </footer>
+        
 
         <script src="./js/header-script.js"></script>
 
