--- a/contato.html
+++ b/contato.html
@@ -40,8 +40,8 @@
 
                 <div class="acess">
                     <ul>
-                        <span><a href="login.html">ENTRAR</a></span>
-                        <a href="cadastro.html"><button>CRIAR CONTA</button></a>
+                        <span><a href="login.php">ENTRAR</a></span>
+                        <a href="cadastro.php"><button>CRIAR CONTA</button></a>
                     </ul>
                 </div>
             </nav>
