--- a/quero-ajudar.html
+++ b/quero-ajudar.html
@@ -120,7 +120,7 @@
                             <i class="bi bi-shift"></i>
                             <h3>Roupas de Pet</h3>
                             <p>Já pensou em dar um toque de estilo e conforto extra aos amiguinhos de quatro patas? Doe roupas de pet e ajude a manter os peludos quentinhos e adoráveis. Seu gesto de carinho fará com que eles se sintam ainda mais amados e estilosos</p>
-                        </div><
+                        </div>
                         <div class="especialidade-box">
                             <i class="bi bi-trash2"></i>
                             <h3>Vasilhas</h3>
