luciana - ultimas att

--- a/inicio.html
+++ b/inicio.html
@@ -147,8 +147,7 @@
                             <img src="./img/heart-icon.svg" alt="">
                         </div>
                         <h3>Adote um Felpudo</h3>
-                        <p>Clicando no botão "Adotar", você pode conferir a listagem completa de felpudos que estão esperando um lar</p>
-                        <button>ADOTAR</button>
+                        <p>Ao logar em nosso site, é possível verificar a lista completa de felpudos disponíveis para adoção em sua cidade.</p>
                     </div>
 
                     <div class="our-services-appointment">
@@ -156,8 +155,7 @@
                             <img src="./img/appointment-icon.svg" alt="">
                         </div>
                         <h3>Adote um Felpudo</h3>
-                        <p>Já adotou seu felpudo? Se sim, clique no botão "Agendar" e verifique os horários disponíveis em conjunto com nossos veterinários parceiros</p>
-                        <button>AGENDAR</button>
+                        <p>Assim que adotar um felpudo, você pode agendar uma consulta gratuita com nossos veterinários pareceiros, atavés da plataforma.</p>
                     </div>
                 </div>
             </section>
